broken token uri UI fix, chain icon was overlapping the 'Broken Token Uri' text, --minor-fix

--- a/src/components/NFT/NFTcard.css
+++ b/src/components/NFT/NFTcard.css
@@ -18,7 +18,7 @@
   box-shadow: 0px 1px 9px rgba(55, 63, 92, 0.52);
 }
 .nft__main {
-  height: 204px;
+  height: 220px;
   overflow: hidden;
   display: flex;
   justify-content:start;
