--- a/src/components/NFT/NewNFT.css
+++ b/src/components/NFT/NewNFT.css
@@ -320,7 +320,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 15px;
     justify-content: center;
     align-items: center;
 }
